# -HIVEC-CM-HIV-Epidemic-Cameroon-Model-

./: .flake8  .gitignore  DOCKER_UI_ENHANCEMENT_COMPLETE.md  DOCUMENTATION.md  Enhanced_Model_Summary.md  Extended_Analysis_Status.md  LICENSE  Makefile  QUICK_START.md  README.md  SAINT_SEYA_RESULTS_SUMMARY.md  SCRIPT_CONSOLIDATION_COMPLETE.md  SCRIPT_CONSOLIDATION_GUIDE.md  analysis_publication_ready.ipynb  corrected_comprehensive_analysis.py  extended_comprehensive_analysis.py  generate_simulation_plots.py  pyproject.toml  requirements.txt  run_all_scenarios.sh  run_remaining_scenarios.sh  test_enhanced_parameters.py
config/: custom_parameters.json  parameters_calibrated.json  parameters_original.json  parameters_v4_calibrated.json  run_config_20251101_153959.json  run_config_20251101_155032.json  run_config_20251101_162418.json  run_config_20251101_225708.json  run_config_20251102_005309.json
docker/: Dockerfile  README.md  docker-compose.yml  start_ui.sh
docs/: PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md
scripts/: analyze_montecarlo_results.py  analyze_results.py  benchmark_transmission.py  compare_scenarios.py  compute_milestones.py  export_labels.py  extended_analysis.py  final_analysis.py  generate_latex_labels.py  generate_plots.py  generate_publication_plots.py  generate_report.py  generate_validation_plots.py  monitor.py  plot_results.py  quick_analysis.py  run_montecarlo_study.py  run_simulation.py  run_study_pipeline.py  validation.py  visualize_montecarlo_results.py
src/: main.py
tests/: test_model_run.py
ui/: README.md  app.py  (+2 more)
(+72 files in other folders)
