[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hivec-cm"
version = "0.1.0"
description = "HIVEC-CM: HIV Epidemic Cameroon Model"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "HIVEC-CM Team" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
hivec-cm = "hivec_cm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hivec_cm*"]
exclude = ["tests*"]

